# frekassa_integration

./: .gitignore  example.py  exeptions.py  main.py  pyproject.toml
