[tool.poetry]
name = "frekassaintegration"
version = "0.1.0"
description = "Integration with FreeKassa merchant"
authors = ["Roman-Zhirovskis <tesslogun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.8.2"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["./migrations", "./tests", "__init__.py"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
extend-ignore = ["F821"]
select = ["F", "E", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
